--- a/website/src/index.css
+++ b/website/src/index.css
@@ -85,3 +85,26 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+
+/* Tutorial sidebar scrollbar */
+.tutorial-sidebar-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+
+.tutorial-sidebar-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.tutorial-sidebar-scroll::-webkit-scrollbar-thumb {
+  background: #3f3f46;
+  border-radius: 2px;
+}
+
+.tutorial-sidebar-scroll::-webkit-scrollbar-thumb:hover {
+  background: #52525b;
+}
+
+/* Scroll margin for anchored sections */
+[id] {
+  scroll-margin-top: 6rem;
+}
